--- a/src/Netsphere.Database/Netsphere.Database.csproj
+++ b/src/Netsphere.Database/Netsphere.Database.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.2.0" />
-    <PackageReference Include="Dapper.FastCrud" Version="2.4.1" />
-    <PackageReference Include="MySql.Data" Version="8.0.8-dmr" />
-    <PackageReference Include="Simple.Migrations" Version="0.9.16" />
+    <PackageReference Include="FluentMigrator" Version="3.1.3" />
+    <PackageReference Include="FluentMigrator.Runner" Version="3.1.3" />
+    <PackageReference Include="linq2db" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.11" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
+    <ProjectReference Include="..\Netsphere.Common\Netsphere.Common.csproj" />
   </ItemGroup>
   <Import Project="..\..\Rules.targets" />
 </Project>
