--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_size = 4
 insert_final_newline = true 
 trim_trailing_whitespace = true
 
-[*.{yml,csproj,props,targets,xml,json,hjson,sql,xaml}]
+[*.{yml,csproj,props,targets,xml,json,hjson,sql,xaml,proto}]
 end_of_line = lf
 indent_size = 2
 insert_final_newline = true 
