--- a/src/Netsphere.Server.Auth/Netsphere.Server.Auth.csproj
+++ b/src/Netsphere.Server.Auth/Netsphere.Server.Auth.csproj
@@ -3,8 +3,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Foundatio" Version="7.0.1738" />
+    <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
   </ItemGroup>
