--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -10,12 +10,12 @@
     <PackageReference Include="Foundatio.JsonNet" Version="7.0.1738" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Netsphere.Common\Netsphere.Common.csproj" />
     <ProjectReference Include="..\Netsphere.Database\Netsphere.Database.csproj" />
+    <ProjectReference Include="..\Netsphere.Resource\Netsphere.Resource.csproj" />
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\Netsphere.Network\Netsphere.Network.csproj" />
     <ProjectReference Include="..\ProudNet\ProudNet.csproj" />
