--- a/src/Netsphere.Common/Netsphere.Common.csproj
+++ b/src/Netsphere.Common/Netsphere.Common.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.20" />
     <PackageReference Include="Hjson" Version="3.0.0" />
+    <PackageReference Include="IdGen" Version="2.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
