--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -6,6 +6,7 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Expressmapper" Version="1.9.1" />
     <PackageReference Include="Foundatio" Version="7.0.1738" />
     <PackageReference Include="Foundatio.JsonNet" Version="7.0.1738" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
