--- a/src/Netsphere.Common/Netsphere.Common.csproj
+++ b/src/Netsphere.Common/Netsphere.Common.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.20" />
+    <PackageReference Include="Foundatio" Version="7.1.1845" />
     <PackageReference Include="Hjson" Version="3.0.0" />
     <PackageReference Include="IdGen" Version="2.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
