--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
     <LangVersion>7.2</LangVersion>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Expressmapper" Version="1.9.1" />
