--- a/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
+++ b/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>linux-x64;win-x86;win-x64</RuntimeIdentifiers>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
@@ -14,7 +15,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.7.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.7.0" />
     <PackageReference Include="Magick.NET-Q16-HDRI-AnyCPU" Version="7.9.0.2" />
-    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-27124-01" />
+    <!--<PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-27124-01" />-->
     <PackageReference Include="ReactiveProperty" Version="4.2.2" />
     <PackageReference Include="Valit" Version="1.0.0" />
   </ItemGroup>
@@ -27,13 +28,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\*" />
   </ItemGroup>
-  <ItemGroup>
-    <TrimFilesRootFiles Include="mscorlib.dll" />
-    <RdXmlFile Include="rd.xml" />
-    <LinkerArg Include="-no-pie" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <IlcArg Include="--stacktracedata" />
-  </ItemGroup>
+  <!--<ItemGroup>-->
+  <!--<TrimFilesRootFiles Include="mscorlib.dll" />-->
+  <!--<RdXmlFile Include="rd.xml" />-->
+  <!--<LinkerArg Include="-no-pie" />-->
+  <!--</ItemGroup>-->
+  <!--<ItemGroup Condition=" '$(Configuration)' == 'Debug' ">-->
+  <!--<IlcArg Include="&#45;&#45;stacktracedata" />-->
+  <!--</ItemGroup>-->
+  <Import Project="..\SharpLzo.targets" />
   <Import Project="..\..\..\Rules.targets" />
 </Project>
