--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Stateless" Version="4.2.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Netsphere.Common\Netsphere.Common.csproj" />
