--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Foundatio" Version="7.1.1845" />
     <PackageReference Include="Foundatio.JsonNet" Version="7.1.1845" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
+    <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Stateless" Version="4.2.1" />
