--- a/src/ProudNet/ProudNet.csproj
+++ b/src/ProudNet/ProudNet.csproj
@@ -3,9 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BlubLib" Version="0.1.20" />
-    <PackageReference Include="BlubLib.DotNetty" Version="0.1.20" />
+    <PackageReference Include="BlubLib" Version="0.1.21" />
+    <PackageReference Include="BlubLib.DotNetty" Version="0.1.21" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.20" />
+    <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
     <PackageReference Include="Iconic.Zlib.Netstandard" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
