--- a/src/Netsphere.Server.Relay/Netsphere.Server.Relay.csproj
+++ b/src/Netsphere.Server.Relay/Netsphere.Server.Relay.csproj
@@ -12,9 +12,9 @@
     <PackageReference Include="Foundatio.JsonNet" Version="7.1.1845" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.csproj" />
     <ProjectReference Include="..\Netsphere.Common\Netsphere.Common.csproj" />
     <ProjectReference Include="..\Netsphere.Database\Netsphere.Database.csproj" />
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
