--- a/src/Netsphere.Common/Netsphere.Common.csproj
+++ b/src/Netsphere.Common/Netsphere.Common.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Foundatio" Version="7.1.1845" />
     <PackageReference Include="Hjson" Version="3.0.0" />
     <PackageReference Include="IdGen" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
@@ -16,6 +17,7 @@
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
