--- a/src/plugins/AuthPluginBase.targets
+++ b/src/plugins/AuthPluginBase.targets
@@ -1,13 +1,11 @@
 <!-- Workaround for sdk bug https://github.com/dotnet/sdk/issues/1366 -->
 <Project>
   <ItemGroup>
-    <PackageReference Include="Expressmapper" Version="1.9.1" Private="False" />
     <PackageReference Include="Foundatio" Version="7.1.1845" Private="False" />
     <PackageReference Include="Foundatio.JsonNet" Version="7.1.1845" Private="False" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" Private="False" />
     <PackageReference Include="Microsoft.Composition" Version="1.0.31" Private="False" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" Private="False" />
-    <PackageReference Include="Stateless" Version="4.2.1" Private="False" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Logging\Logging.csproj" Private="False" />
@@ -17,6 +15,6 @@
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere\Netsphere.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Network\Netsphere.Network.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\ProudNet\ProudNet.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Server.Game\Netsphere.Server.Game.csproj" Private="False" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Server.Auth\Netsphere.Server.Auth.csproj" Private="False" />
   </ItemGroup>
 </Project>
