--- a/src/plugins/ChatPluginBase.targets
+++ b/src/plugins/ChatPluginBase.targets
@@ -7,7 +7,6 @@
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" Private="False" />
     <PackageReference Include="Microsoft.Composition" Version="1.0.31" Private="False" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" Private="False" />
-    <PackageReference Include="Stateless" Version="4.2.1" Private="False" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Logging\Logging.csproj" Private="False" />
@@ -17,6 +16,6 @@
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere\Netsphere.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Network\Netsphere.Network.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\ProudNet\ProudNet.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Server.Game\Netsphere.Server.Game.csproj" Private="False" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Server.Chat\Netsphere.Server.Chat.csproj" Private="False" />
   </ItemGroup>
 </Project>
