--- a/src/Netsphere.Database/Netsphere.Database.csproj
+++ b/src/Netsphere.Database/Netsphere.Database.csproj
@@ -4,14 +4,17 @@
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FluentMigrator" Version="3.1.3" />
-    <PackageReference Include="FluentMigrator.Runner" Version="3.1.3" />
-    <PackageReference Include="linq2db" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Netsphere.Common\Netsphere.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\Auth" />
+    <Folder Include="Migrations\Game" />
   </ItemGroup>
   <Import Project="..\..\Rules.targets" />
 </Project>
