--- a/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
+++ b/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>linux-x64;win-x86;win-x64</RuntimeIdentifiers>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
