--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: 0.0.{build}
 pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
-image: Visual Studio 2017
+image: Ubuntu
 deploy_script:
   - ps: >-
       docker login --username $Env:DOCKER_USER --password $Env:DOCKER_PASSWORD
