--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,26 @@
 version: 0.0.{build}
+image: Ubuntu
+
 pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
-image: Ubuntu
-deploy_script:
-  - ps: >-
-      docker login --username $Env:DOCKER_USER --password $Env:DOCKER_PASSWORD
-
-      ./build.ps1 DockerPush
-build_script:
-  - ps: >-
-      ./build.ps1 Dist -Configuration Debug
-
-      ./build.ps1 DockerBuild
-
-      7z a binaries_debug.zip $Env:APPVEYOR_BUILD_FOLDER\dist\*
-test: off
-artifacts:
-  - path: binaries_debug.zip
-    name: netspherepirates
-deploy: off
 environment:
   DOCKER_USER:
     secure: VYidDb7gu+5Sb/D7I25OLS1vxZwd1PinespCDLwwIqc=
   DOCKER_PASSWORD:
     secure: gH6MrYChR6DolTy74JE9mWCl6NctnI+m7mH0GBMcHG0=
+
+install:
+  - cmd: chmod +x build.sh
+build_script:
+  - cmd: ./build.sh Dist -Configuration Debug && ./build.sh DockerBuild && 7z a binaries_debug.zip $APPVEYOR_BUILD_FOLDER\dist\*
+test: off
+artifacts:
+  - path: binaries_debug.zip
+    name: netspherepirates
+
+before_deploy:
+  - cmd: docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+deploy_script:
+  - cmd: ./build.sh DockerPush
+deploy: off
