--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,6 @@ artifacts:
     name: netspherepirates
 
 before_deploy:
-  - docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+  - docker login --username "$DOCKER_USER" --password "$DOCKER_PASSWORD"
 deploy_script:
   - ./build.sh DockerPush
