--- a/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
+++ b/src/Netsphere.Server.Game/Netsphere.Server.Game.csproj
@@ -8,10 +8,10 @@
     <NoWarn>1998</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Expressmapper" Version="1.9.1" />
     <PackageReference Include="Foundatio" Version="7.1.1845" />
     <PackageReference Include="Foundatio.JsonNet" Version="7.1.1845" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
+    <PackageReference Include="HolopaMir.ExpressMapper" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
     <PackageReference Include="Stateless" Version="4.2.1" />
   </ItemGroup>
