--- a/src/plugins/ChatPluginBase.targets
+++ b/src/plugins/ChatPluginBase.targets
@@ -1,21 +1,6 @@
-<!-- Workaround for sdk bug https://github.com/dotnet/sdk/issues/1366 -->
 <Project>
   <ItemGroup>
-    <PackageReference Include="Expressmapper" Version="1.9.1" Private="False" />
-    <PackageReference Include="Foundatio" Version="7.1.1845" Private="False" />
-    <PackageReference Include="Foundatio.JsonNet" Version="7.1.1845" Private="False" />
-    <PackageReference Include="Foundatio.Redis" Version="7.0.1584" Private="False" />
-    <PackageReference Include="Microsoft.Composition" Version="1.0.31" Private="False" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" Private="False" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Logging\Logging.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Common\Netsphere.Common.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Database\Netsphere.Database.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Resource\Netsphere.Resource.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere\Netsphere.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Network\Netsphere.Network.csproj" Private="False" />
-    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\ProudNet\ProudNet.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Server.Chat\Netsphere.Server.Chat.csproj" Private="False" />
   </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)\WorkaroundSDKIssue1366.targets" />
 </Project>
