--- a/src/Netsphere.Server.Relay/Netsphere.Server.Relay.csproj
+++ b/src/Netsphere.Server.Relay/Netsphere.Server.Relay.csproj
@@ -5,6 +5,7 @@
     <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
     <LangVersion>7.2</LangVersion>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <NoWarn>1998</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Foundatio" Version="7.1.1845" />
